--- a/dashboard-js/bower.json
+++ b/dashboard-js/bower.json
@@ -15,7 +15,8 @@
     "ng-idle": "1.0.4",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-moment": "~0.10.0"
+    "angular-moment": "~0.10.0",
+    "ngstorage": "~0.3.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
