--- a/wf-central/pom.xml
+++ b/wf-central/pom.xml
@@ -250,6 +250,13 @@
 
 		<!-- REDIS -->
 		<dependency>
+			<groupId>org.egov-ua</groupId>
+			<artifactId>org.egov-ua.storage.durable</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		
+		<!-- REDIS -->
+		<dependency>
 			<groupId>org.activiti.redis</groupId>
 			<artifactId>wf-dniprorada-redis</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
