--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -21,6 +21,7 @@
     "angular-mocks": "~1.3.15",
     "angular-bootstrap": "~0.12.1",
     "angular-ui-router": "~0.2.13",
+    "angular-ui-utils":"~0.2.3",
     "ui-router-extras": "~0.0.13",
     "requirejs": "~2.1.17",
     "angularAMD": "~0.2.1",
