--- a/central-js/client/package.json
+++ b/central-js/client/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-git-deploy": "^0.1.1",
     "grunt-html-build": "^0.4.3",
-    "grunt-html2js": "^0.3.2"
+    "grunt-html2js": "^0.3.2",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
