e-gov.org.ua > igov.org.ua

--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,12 @@
 		<repository>
 			<id>eGovUa_Nexus</id>
 			<name>Internal Releases</name>
-			<url>https://nexus.e-gov.org.ua/nexus/content/repositories/releases</url>
+			<url>https://nexus.igov.org.ua/nexus/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
 			<id>eGovUa_Nexus</id>
 			<name>Internal Snapshots</name>
-			<url>https://nexus.e-gov.org.ua/nexus/content/repositories/snapshots</url>
+			<url>https://nexus.igov.org.ua/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -83,7 +83,7 @@
         </repository>
         <repository>
             <id>eGovUa_Nexus</id>
-            <url>https://nexus.e-gov.org.ua/nexus/content/groups/public</url>
+            <url>https://nexus.igov.org.ua/nexus/content/groups/public</url>
         </repository>
         <repository>
             <id>Activiti</id>
