--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,25 @@
 				<version>${liquibase.version}</version>
 			</dependency>
 
+                        <!-- your own standard logging dependencies -->  
+                        <dependency>  
+                            <groupId>org.slf4j</groupId>  
+                            <artifactId>slf4j-api</artifactId>  
+                            <version>1.7.5</version>  
+                        </dependency>  
+                        <dependency>  
+                            <groupId>org.slf4j</groupId>  
+                            <artifactId>slf4j-log4j12</artifactId>  
+                            <version>1.7.5</version>  
+                        </dependency>
+                        
+                        <!-- special dependency to fix liquibase's logging fetish -->  
+                        <dependency>  
+                            <groupId>com.mattbertolini</groupId>  
+                            <artifactId>liquibase-slf4j</artifactId>  
+                            <version>1.2.1</version>  
+                        </dependency>  
+
 			<!-- Other -->
 
 			<dependency>
