--- a/central-js/package.json
+++ b/central-js/package.json
@@ -16,7 +16,8 @@
     "xml2js": "0.4.6",
     "caller-id": "0.1.0",
     "http-proxy": "1.11.1",
-    "node-cache": "~2.1.1"
+    "node-cache": "~2.1.1",
+    "array-query": "^0.1.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
