правка контекста и пропертей монги

--- a/storage/durable/src/main/resources/storage-mongodb.properties
+++ b/storage/durable/src/main/resources/storage-mongodb.properties
@@ -5,10 +5,12 @@
 ##mongodb.password=
 ##when using MongoDB running in VM from outside of VM
 ##mongodb.host=192.168.10.10
-
-mongodb.host=10.60.74.10
+##mongodb.host=10.60.74.10
+##mongodb.host=mongo.igov.org.ua
+##mongodb.database=durable
+mongodb.host=54.76.209.57
 mongodb.port=27017
 mongodb.login=sitesc
-mongodb.password=
-mongodb.database=durable
+mongodb.password=3KigZ5Y9rtfrt!!
+mongodb.database=test
 mongodb.bucket=
