--- a/storage/durable/src/test/resources/storage-mongodb.properties
+++ b/storage/durable/src/test/resources/storage-mongodb.properties
@@ -5,10 +5,12 @@
 ##mongodb.password=
 ##when using MongoDB running in VM from outside of VM
 ##mongodb.host=192.168.10.10
-
-mongodb.host=localhost
+##mongodb.host=localhost
+##mongodb.host=10.60.74.10
+##mongodb.database=ua-egov-durable
+mongodb.host=54.76.209.57
 mongodb.port=27017
-mongodb.login=
-mongodb.password=
-mongodb.database=ua-egov-durable
+mongodb.login=sitesc
+mongodb.password=3KigZ5Y9rtfrt!!
+mongodb.database=test
 mongodb.bucket=
