--- a/storage/durable/src/main/resources/storage-mongodb.properties
+++ b/storage/durable/src/main/resources/storage-mongodb.properties
@@ -8,9 +8,19 @@
 ##mongodb.host=10.60.74.10
 ##mongodb.host=mongo.igov.org.ua
 ##mongodb.database=durable
-mongodb.host=54.76.209.57
-mongodb.port=27017
+
+##mongodb.host=54.76.209.57
+##mongodb.port=27017
 mongodb.login=sitesc
 mongodb.password=3KigZ5Y9rtfrt!!
-mongodb.database=test
+##mongodb.database=test
+##mongodb.bucket=sitesc
+
+mongodb.host=54.76.209.57
+mongodb.port=27017
+##mongodb.login=govAdmn
+##mongodb.password=3KigZ5Y9u2ikpV0XQg
+mongodb.database=e-gov
 mongodb.bucket=
+
+
