окончательная правка контекста и пропертей монги +включение тестов

--- a/storage/durable/src/main/resources/storage-mongodb.properties
+++ b/storage/durable/src/main/resources/storage-mongodb.properties
@@ -21,6 +21,7 @@ mongodb.port=27017
 ##mongodb.login=govAdmn
 ##mongodb.password=3KigZ5Y9u2ikpV0XQg
 mongodb.database=e-gov
-mongodb.bucket=
+##mongodb.database=admin
+mongodb.bucket=fs
 
 
