--- a/wf-dniprorada/src/main/resources/storage-mongodb.properties
+++ b/wf-dniprorada/src/main/resources/storage-mongodb.properties
@@ -5,10 +5,23 @@
 ##mongodb.password=
 ##when using MongoDB running in VM from outside of VM
 ##mongodb.host=192.168.10.10
+##mongodb.host=10.60.74.10
+##mongodb.host=mongo.igov.org.ua
+##mongodb.database=durable
 
-mongodb.host=10.60.74.10
-mongodb.port=27017
+##mongodb.host=54.76.209.57
+##mongodb.port=27017
 mongodb.login=sitesc
-mongodb.password=
-mongodb.database=durable
-mongodb.bucket=
+mongodb.password=3KigZ5Y9rtfrt!!
+##mongodb.database=test
+##mongodb.bucket=sitesc
+
+mongodb.host=54.76.209.57
+mongodb.port=27017
+##mongodb.login=govAdmn
+##mongodb.password=3KigZ5Y9u2ikpV0XQg
+mongodb.database=e-gov
+##mongodb.database=admin
+mongodb.bucket=fs
+
+
