--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -277,6 +277,13 @@
 			<version>${activity.version}</version>
 		</dependency>
 
+		<!-- MONGO -->
+		<dependency>
+			<groupId>org.egov-ua</groupId>
+			<artifactId>org.egov-ua.storage.durable</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<!-- REDIS -->
 		<dependency>
 			<groupId>org.activiti.redis</groupId>
