--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -400,6 +400,18 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+                
+                
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-test</artifactId>
+	  <version>4.1.4.RELEASE</version>
+	  <type>jar</type>
+	 </dependency>                
+                
+                
+
+                
 	</dependencies>
 
 </project>
