--- a/dashboard-js/package.json
+++ b/dashboard-js/package.json
@@ -25,7 +25,8 @@
     "request":"2.54.0",
     "xml2js":"0.4.6",
     "log4js":"0.6.22",
-    "caller-id":"0.1.0"
+    "caller-id":"0.1.0",
+    "http-proxy":"1.11.1"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
