--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -56,19 +56,19 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-                <!--<groupId>org.zeroturnaround</groupId>-->
-                <!--<artifactId>jrebel-maven-plugin</artifactId>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>generate-rebel-xml</id>-->
-                        <!--<phase>process-resources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>generate</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>jrebel-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-rebel-xml</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.1</version>
@@ -87,18 +87,18 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--<plugin>-->
-                <!--<groupId>org.apache.tomcat.maven</groupId>-->
-                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-                <!--<configuration>-->
-                    <!--<port>8080</port>-->
-                    <!--<path>/wf-dniprorada</path>-->
-                    <!--<systemProperties>-->
-                        <!--<com.sun.management.jmxremote.port>4000</com.sun.management.jmxremote.port>-->
-                        <!--<spring.profiles.active>test</spring.profiles.active>-->
-                    <!--</systemProperties>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <port>8080</port>
+                    <path>/wf-dniprorada</path>
+                    <systemProperties>
+                        <com.sun.management.jmxremote.port>4000</com.sun.management.jmxremote.port>
+                        <spring.profiles.active>test</spring.profiles.active>
+                    </systemProperties>
+                </configuration>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
