--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -9,6 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <name>iGov-UA WF-Base</name>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>wf-base</artifactId>
     <version>1.0-SNAPSHOT</version>
