--- a/wf-central/pom.xml
+++ b/wf-central/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<name>iGov-UA WF-Central/</name>
+	<name>iGov-UA WF-Central</name>
 	<artifactId>wf-central</artifactId>
 	<packaging>war</packaging>
 
