--- a/wf-region/pom.xml
+++ b/wf-region/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<name>iGov-UA WF-Region/</name>
+	<name>iGov-UA WF-Region</name> 
 	<artifactId>wf-region</artifactId>
 	<packaging>war</packaging>
 
