--- a/central-js/package.json
+++ b/central-js/package.json
@@ -17,7 +17,8 @@
     "caller-id": "0.1.0",
     "http-proxy": "1.11.1",
     "node-cache": "~2.1.1",
-    "array-query": "^0.1.1"
+    "array-query": "^0.1.1",
+    "form-data": "0.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
