--- a/auth-custom/pom.xml
+++ b/auth-custom/pom.xml
@@ -14,7 +14,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>org.egov-ua</groupId>
-    <artifactId>org.egov-ua.storage-static</artifactId>
+    <artifactId>org.egov-ua.auth-custom</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
