--- a/dashboard-js/bower.json
+++ b/dashboard-js/bower.json
@@ -16,10 +16,17 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-moment": "~0.10.0",
-    "ngstorage": "~0.3.3"
+    "ngstorage": "~0.3.3",
+    "angular-ui-utils": "~0.2.3",
+    "angular-ui": "~0.4.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
+  },
+  "overrides": {
+    "angular-ui": {
+      "main": "./build/angular-ui.js"
+    }
   }
 }
