--- a/dashboard-js/bower.json
+++ b/dashboard-js/bower.json
@@ -17,8 +17,7 @@
     "lodash": "~2.4.1",
     "angular-moment": "~0.10.0",
     "ngstorage": "~0.3.3",
-    "angular-ui-utils": "~0.2.3",
-    "angular-ui": "~0.4.0"
+    "angular-ui-utils": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
