--- a/dashboard-js/package.json
+++ b/dashboard-js/package.json
@@ -41,7 +41,7 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-google-cdn": "~0.4.0",
+    "grunt-google-cdn": "0.4.3",
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
     "grunt-rev": "~0.1.0",
