--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -26,7 +26,8 @@
     "requirejs": "~2.1.17",
     "angularAMD": "~0.2.1",
     "angular-messages": "~1.3.15",
-    "angular-ui": "~0.4.0"
+    "angular-ui": "~0.4.0",
+    "angular-i18n": "~1.4.0"
   },
   "resolutions": {
     "angular": "~1.3.15"
