--- a/central-js/package.json
+++ b/central-js/package.json
@@ -18,14 +18,15 @@
     "http-proxy": "1.11.1",
     "node-cache": "~2.1.1",
     "array-query": "^0.1.1",
-    "form-data": "0.2.0"
+    "form-data": "0.2.0",
+    "async":"1.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express": "^1.4.1",
     "grunt-express-server": "^0.5.1",
-    "grunt-node-inspector": "~0.1.5",
+    "grunt-node-inspector": "0.2.0",
     "grunt-nodemon": "~0.2.0",
     "grunt-concurrent": "1.0.0",
     "jit-grunt": "^0.5.0",
