--- a/wf-base/src/main/resources/db.properties
+++ b/wf-base/src/main/resources/db.properties
@@ -3,3 +3,5 @@ jdbc.driver=org.h2.Driver
 jdbc.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=1000
 jdbc.username=sa
 jdbc.password=
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.globally_quoted_identifiers=false
