--- a/central-js/package.json
+++ b/central-js/package.json
@@ -19,19 +19,21 @@
     "node-cache": "~2.1.1",
     "array-query": "^0.1.1",
     "form-data": "0.2.0",
-    "async":"1.2.0"
+    "async": "1.2.0"
   },
   "devDependencies": {
+    "combined-stream": "^1.0.3",
     "grunt": "^0.4.5",
+    "grunt-concurrent": "1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express": "^1.4.1",
     "grunt-express-server": "^0.5.1",
     "grunt-node-inspector": "0.2.0",
     "grunt-nodemon": "~0.2.0",
-    "grunt-concurrent": "1.0.0",
-    "jit-grunt": "^0.5.0",
-    "time-grunt": "~0.3.1",
     "grunt-open": "~0.2.3",
-    "open": "~0.0.4"
+    "jit-grunt": "^0.5.0",
+    "mime-types": "^2.1.1",
+    "open": "~0.0.4",
+    "time-grunt": "~0.3.1"
   }
 }
