--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -252,6 +252,12 @@
             <artifactId>liquibase-core</artifactId>
         </dependency>
 
+        <!-- Other -->
+        <dependency>
+            <groupId>net.sf.brunneng.jom</groupId>
+            <artifactId>java-object-merger</artifactId>
+        </dependency>
+
         <!-- Running example processes -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
