--- a/dashboard-js/bower.json
+++ b/dashboard-js/bower.json
@@ -17,7 +17,9 @@
     "lodash": "~2.4.1",
     "angular-moment": "~0.10.0",
     "ngstorage": "~0.3.3",
-    "angular-ui-utils": "~0.2.3"
+    "angular-ui-utils": "~0.2.3",
+    "zeroclipboard": "~2.2.0",
+    "ng-clip": "~0.2.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
