--- a/central-js/package.json
+++ b/central-js/package.json
@@ -19,7 +19,8 @@
     "node-cache": "~2.1.1",
     "array-query": "^0.1.1",
     "form-data": "0.2.0",
-    "async":"1.2.0"
+    "async":"1.2.0",
+    "node-uuid":"^1.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
