--- a/central-js/package.json
+++ b/central-js/package.json
@@ -19,7 +19,9 @@
     "node-cache": "~2.1.1",
     "array-query": "^0.1.1",
     "form-data": "0.2.0",
-    "async": "1.2.0"
+    "async": "1.2.0",
+    "cookie-session":"1.1.0",
+    "composable-middleware":"0.3.0"
   },
   "devDependencies": {
     "combined-stream": "^1.0.3",
