Revert "Merge branch 'admin_controls' into test"
This reverts commit 8e0d8bb807f2601ed4971b52932fa7a80bad7b4c, reversing
changes made to 25ebbbff3ef14d736109ad1e022be674a5a429c4.

--- a/dashboard-js/bower.json
+++ b/dashboard-js/bower.json
@@ -6,7 +6,7 @@
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
-    "bootstrap": "3.3.4",
+    "bootstrap": "~3.3.4",
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
