--- a/storage-static/src/main/resources/storage-mongodb.properties
+++ b/storage-static/src/main/resources/storage-mongodb.properties
@@ -16,7 +16,7 @@ mongodb.password=3KigZ5Y9rtfrt!!
 ##mongodb.database=test
 ##mongodb.bucket=sitesc
 
-mongodb.host=54.76.209.57
+mongodb.host=redis.igov.org.ua
 mongodb.port=27017
 ##mongodb.login=govAdmn
 ##mongodb.password=3KigZ5Y9u2ikpV0XQg
