--- a/storage-static/src/main/resources/storage-mongodb.properties
+++ b/storage-static/src/main/resources/storage-mongodb.properties
@@ -12,7 +12,7 @@
 ##mongodb.host=54.76.209.57
 ##mongodb.port=27017
 mongodb.login=sitesc
-mongodb.password=ZZX6YDC1ZDUPp3nOY
+mongodb.password=3KigZ5Y9rtfrt!!
 ##mongodb.database=test
 ##mongodb.bucket=sitesc
 
