--- a/wf-base/src/main/resources/storage-mongodb.properties
+++ b/wf-base/src/main/resources/storage-mongodb.properties
@@ -16,7 +16,10 @@ mongodb.password=3KigZ5Y9rtfrt!!
 ##mongodb.database=test
 ##mongodb.bucket=sitesc
 
-mongodb.host=54.76.209.57
+#test:
+mongodb.host=redis.igov.org.ua
+#prod:
+#mongodb.host=mongo.igov.org.ua
 mongodb.port=27017
 ##mongodb.login=govAdmn
 ##mongodb.password=3KigZ5Y9u2ikpV0XQg
