--- a/central-js/package.json
+++ b/central-js/package.json
@@ -20,8 +20,7 @@
     "array-query": "^0.1.1",
     "form-data": "0.2.0",
     "async": "1.2.0",
-    "node-uuid": "^1.0.0",
-    "cookie-session":"1.1.0"
+    "node-uuid": "^1.0.0"
   },
   "devDependencies": {
     "combined-stream": "^1.0.3",
