--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ wf-region/src/main/resources/bpmn/autodeploy/test.bpmn
 wf-region/src/main/resources/bpmn/autodeploy/citizens_request_test_tsapko.bpmn
 wf-region/src/main/resources/bpmn/autodeploy/citizens_request_test_tsapko.bpmn.xml
 *.orig
+
+#sublime
+project.sublime-workspace
