--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "bootstrap": "~3.3.4",
+    "bootstrap": "3.3.4",
     "angular": "~1.3.15",
     "angular-mocks": "~1.3.15",
     "angular-bootstrap": "~0.12.1",
