--- a/central-js/package.json
+++ b/central-js/package.json
@@ -33,6 +33,7 @@
     "grunt-node-inspector": "0.2.0",
     "grunt-nodemon": "~0.2.0",
     "grunt-open": "~0.2.3",
+    "grunt-run-grunt": "0.1.4",
     "jit-grunt": "^0.5.0",
     "mime-types": "^2.1.1",
     "open": "~0.0.4",
