--- a/central-js/package.json
+++ b/central-js/package.json
@@ -11,9 +11,7 @@
     "ejs": "^2.3.1",
     "composable-middleware": "^0.3.0",
     "log4js": "0.6.22",
-    "connect-mongo": "^0.4.1",
     "external-ip": "0.2.3",
-    "xml2js": "0.4.6",
     "caller-id": "0.1.0",
     "http-proxy": "1.11.1",
     "node-cache": "~2.1.1",
@@ -34,6 +32,7 @@
     "grunt-nodemon": "~0.2.0",
     "grunt-open": "~0.2.3",
     "grunt-run-grunt": "0.1.4",
+    "grunt-mocha-test": "~0.10.2",
     "jit-grunt": "^0.5.0",
     "mime-types": "^2.1.1",
     "open": "~0.0.4",
