--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -28,7 +28,9 @@
     "angular-messages": "~1.3.15",
     "angular-ui": "~0.4.0",
     "angular-i18n": "~1.4.0",
-    "jquery.cookie": "1.4.1"
+    "jquery.cookie": "1.4.1",
+    "zeroclipboard": "~2.2.0",
+    "ng-clip": "~0.2.6"
   },
   "resolutions": {
     "angular": "~1.3.15"
