--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 		<guava.version>15.0</guava.version>
 		<easymock.version>3.0</easymock.version>
 		<hibernate.version>4.3.10.Final-fixed</hibernate.version>
+		<usertype.core.version>3.2.0.GA</usertype.core.version>
 		<log4j.version>1.2.17</log4j.version>
 		<liquibase.version>3.3.3</liquibase.version>
 		<java.object.merger.version.version>0.8.5.1</java.object.merger.version.version>
@@ -264,6 +265,12 @@
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
 				<version>${hibernate.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jadira.usertype</groupId>
+				<artifactId>usertype.core</artifactId>
+				<version>${usertype.core.version}</version>
 			</dependency>
 
 			<dependency>
