--- a/wf-base/src/main/resources/storage-mongodb.properties
+++ b/wf-base/src/main/resources/storage-mongodb.properties
@@ -12,7 +12,8 @@
 ##mongodb.host=54.76.209.57
 ##mongodb.port=27017
 mongodb.login=sitesc
-mongodb.password=3KigZ5Y9rtfrt!!
+#mongodb.password=3KigZ5Y9rtfrt!!
+mongodb.password=ZZX6YDC1ZDUPp3nOY
 ##mongodb.database=test
 ##mongodb.bucket=sitesc
 
