--- a/wf-region/pom.xml
+++ b/wf-region/pom.xml
@@ -466,6 +466,24 @@
                 
                 
 
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>jboss</groupId>
+			<artifactId>jboss-serialization</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>trove</groupId>
+			<artifactId>trove</artifactId>
+		</dependency>
+
+
+
+
                 
 	</dependencies>
 
