--- a/wf-region/src/main/resources/email.properties
+++ b/wf-region/src/main/resources/email.properties
@@ -1,8 +1,7 @@
 mailServerHost=smtp.gmail.com
 mailServerPort=465
-mailServerDefaultFrom=admin@igov.org.com
+mailServerDefaultFrom=dnipro.egov.test.ua@gmail.com
 mailServerUsername=dnipro.egov.test.ua
 mailServerPassword=dnipro.egov.tes
 mailServerUseSSL=true
 mailServerUseTLS=true
-mail.address.noreply=noreply@igov.org.ua
