<property name="location" value="file:${catalina.home}/conf/storage-mongodb.properties" /> 			<!--property name="location" value="classpath:storage-mongodb.properties" /--> +

--- a/storage-static/src/main/resources/storage-mongodb.properties
+++ b/storage-static/src/main/resources/storage-mongodb.properties
@@ -13,7 +13,10 @@
 ##mongodb.port=27017
 mongodb.login=sitesc
 #mongodb.password=3KigZ5Y9rtfrt!!
+#test:
 mongodb.password=ZZX6YDC1ZDUPp3nOY
+#prod:
+#mongodb.password=
 ##mongodb.database=test
 ##mongodb.bucket=sitesc
 
