--- a/wf-central/src/main/resources/email.properties
+++ b/wf-central/src/main/resources/email.properties
@@ -1,7 +1,8 @@
 mailServerHost=smtp.gmail.com
 mailServerPort=465
-mailServerDefaultFrom=dnipro.egov.test.ua@gmail.com
+mailServerDefaultFrom=admin@igov.org.com
 mailServerUsername=dnipro.egov.test.ua
 mailServerPassword=dnipro.egov.tes
 mailServerUseSSL=true
 mailServerUseTLS=true
+mailAddressNoreply=noreply@igov.org.ua
