--- a/central-js/package.json
+++ b/central-js/package.json
@@ -36,6 +36,9 @@
     "jit-grunt": "^0.5.0",
     "mime-types": "^2.1.1",
     "open": "~0.0.4",
-    "time-grunt": "~0.3.1"
+    "time-grunt": "~0.3.1",
+    "karma": "~0.12.9",
+    "supertest": "~0.11.0",
+    "should": "~3.3.1"
   }
 }
