--- a/wf-central/pom.xml
+++ b/wf-central/pom.xml
@@ -237,6 +237,11 @@
 			<artifactId>jmimemagic</artifactId>
 			<version>0.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+  		</dependency>
 		<!-- Activiti -->
 		<dependency>
 			<groupId>org.activiti</groupId>
