--- a/storage-temp/pom.xml
+++ b/storage-temp/pom.xml
@@ -1,22 +1,60 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.activiti.redis</groupId>
-    <artifactId>wf-region-redis</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.egov-ua</groupId>
         <artifactId>org.egov-ua</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <!--version>1.0-SNAPSHOT</version-->
+        <version>${igov.wf-base.version}</version>
     </parent>
-
+        
     <name>iGov-UA Storage Temp</name>
+    <groupId>org.activiti.redis</groupId>
+    <artifactId>wf-region-redis</artifactId>
+    <!--version>1.0.0${parameter.sRevision}-SNAPSHOT</version-->
+    <version>${igov.storage-temp.version}</version>
+    <packaging>jar</packaging>
 
     <properties>
         <spring.data.redis.version>1.2.1.RELEASE</spring.data.redis.version>
     </properties>
+
+
+        
+    <!--profiles>
+        <profile>
+            <id>alpha</id>
+            <version>1.0.0a-SNAPSHOT</version>
+            <properties>
+                <sRevision>b</sRevision>
+            </properties>
+        </profile>
+    </profiles-->
+
+    <!--profiles>
+        <profile>
+            <id>beta</id>
+            <version>1.0.0b-SNAPSHOT</version>
+            <properties>
+                <sRevision>b</sRevision>
+            </properties>
+        </profile>
+    </profiles>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <version>1.0.0-RELEASE</version>
+            <properties>
+                <sRevision></sRevision>
+            </properties>
+        </profile>
+    </profiles-->
+        
+    
+    <!--${parameter.sRevision}-->
+
 
     <dependencies>
         <!-- REDIS DEPENDENCIES -->
