--- a/wf-region/pom.xml
+++ b/wf-region/pom.xml
@@ -5,19 +5,21 @@
     <parent>
         <groupId>org.egov-ua</groupId>
         <artifactId>org.egov-ua</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <!--version>1.0-SNAPSHOT</version-->
+        <version>${igov.wf-base.version}</version>
     </parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<name>iGov-UA WF-Region</name> 
 	<artifactId>wf-region</artifactId>
+        <version>${igov.wf-region.version}</version>
 	<packaging>war</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<activity.version>5.17.0</activity.version>
 		<guava-version>15.0</guava-version>
-	</properties>
+        </properties>
 
 	<!-- distributionManagement>
 		<repository>
@@ -333,18 +335,18 @@
 		</dependency>
 
 		<!-- MONGO -->
-		<dependency>
+		<!--dependency>
 			<groupId>org.egov-ua</groupId>
 			<artifactId>org.egov-ua.storage-static</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+                        <version>${igov.storage-static.version}</version>
+		</dependency-->
 
 		<!-- REDIS -->
-		<dependency>
+		<!--dependency>
 			<groupId>org.activiti.redis</groupId>
 			<artifactId>wf-region-redis</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+                        <version>${igov.storage-temp.version}</version>
+		</dependency-->
 
 		<!-- Database -->
 		<dependency>
