--- a/wf-region/pom.xml
+++ b/wf-region/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <groupId>org.egov-ua</groupId>
         <artifactId>org.egov-ua</artifactId>
-        <!--version>1.0-SNAPSHOT</version-->
-        <version>${igov.wf-base.version}</version>
+	<version>1.0-SNAPSHOT</version>
+	<!--version>${igov.wf-base.version}</version-->
     </parent>
 
 	<modelVersion>4.0.0</modelVersion>
