--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<groupId>org.egov-ua</groupId>
 	<artifactId>org.egov-ua</artifactId>
 	<packaging>pom</packaging>
-	<!--version>1.0-SNAPSHOT</version-->
-	<version>${igov.wf-base.version}</version>
+	<version>1.0-SNAPSHOT</version>
+	<!--version>${igov.wf-base.version}</version-->
 
 	<properties>
 		<!--compiler properties -->
