--- a/central-js/client/bower.json
+++ b/central-js/client/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.3.15",
     "angular-mocks": "~1.3.15",
     "angular-bootstrap": "~0.12.1",
+    "angular-resource": "~1.2.16",
     "angular-ui-router": "~0.2.13",
     "angular-ui-utils": "~0.2.3",
     "ui-router-extras": "~0.0.13",
