--- a/central-js/package.json
+++ b/central-js/package.json
@@ -19,7 +19,9 @@
     "form-data": "0.2.0",
     "async": "1.2.0",
     "node-uuid": "^1.0.0",
-    "cookie-session":"1.1.0"
+    "cookie-session": "1.1.0",
+    "passport": "~0.2.0",
+    "passport-oauth2": "1.1.2"
   },
   "devDependencies": {
     "combined-stream": "^1.0.3",
