--- a/wf-central/pom.xml
+++ b/wf-central/pom.xml
@@ -222,14 +222,14 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>wf-base</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${igov.wf-base.version}</version>
             <classifier>lib</classifier>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>wf-base</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${igov.wf-base.version}</version>
             <classifier>ui-zip</classifier>
             <type>zip</type>
             <scope>provided</scope>
