--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -299,6 +299,11 @@
             <artifactId>java-object-merger</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.opensymphony.quartz</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
+
         <!-- Running example processes -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
