--- a/wf-central/src/main/webapp/WEB-INF/web.xml
+++ b/wf-central/src/main/webapp/WEB-INF/web.xml
@@ -29,10 +29,10 @@
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
     
-    <filter>
+    <!--filter>
         <filter-name>multireadFilter</filter-name>
         <filter-class>org.activiti.rest.controller.adapter.MultiReadServletFilter</filter-class>
-    </filter>
+    </filter-->
 
     <filter>
         <filter-name>UIFilter</filter-name>
@@ -49,10 +49,10 @@
         <filter-class>org.activiti.explorer.servlet.JsonpCallbackFilter</filter-class>
     </filter>
 
-    <filter-mapping>
+    <!--filter-mapping>
         <filter-name>multireadFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping> 
+    </filter-mapping--> 
 
     <filter-mapping>
         <filter-name>UIFilter</filter-name>
