--- a/wf-central/src/main/webapp/WEB-INF/web.xml
+++ b/wf-central/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
     <filter>
         <filter-name>multireadFilter</filter-name>
         <filter-class>org.activiti.rest.controller.adapter.MultiReadServletFilter</filter-class>
-    </filter>z
+    </filter>
 
     <filter>
         <filter-name>UIFilter</filter-name>
