--- a/wf-central/pom.xml
+++ b/wf-central/pom.xml
@@ -40,6 +40,19 @@
 	</repositories-->
 
 	<build>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources/liquibase</directory>
+				<targetPath>liquibase</targetPath>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
