[issue #502]  Добавлен механизм аутентификации по одноразовому коду

--- a/wf-base/src/main/resources/AS.properties
+++ b/wf-base/src/main/resources/AS.properties
@@ -2,3 +2,5 @@
 general.bTest = true
 general.auth.login = activiti-master
 general.auth.password = UjhtJnEvf!
+general.auth.custom.accessKey = 123
+general.auth.custom.subjectId = 122
