[issue #502]  Добавлен механизм для добавления многоразового ключа

--- a/wf-base/src/main/resources/AS.properties
+++ b/wf-base/src/main/resources/AS.properties
@@ -4,3 +4,5 @@ general.auth.login = activiti-master
 general.auth.password = UjhtJnEvf!
 general.auth.custom.accessKey = 123
 general.auth.custom.subjectId = 122
+# do not remove specified key from storage (for testing)
+general.auth.custom.persistentKey = 6ffe3a19-b8c9-4dc5-82a4-b795d41fa528
