На главном портале реализовать валидацию поля, которое промаркеровано как Телефон #375

--- a/central-js/bower.json
+++ b/central-js/bower.json
@@ -21,7 +21,8 @@
     "jquery.cookie": "~1.4.1",
     "ng-clip": "~0.2.6",
     "zeroclipboard": "~2.2.0",
-    "angular-ui-utils": "~0.2.3"
+    "angular-ui-utils": "~0.2.3",
+    "intl-tel-input" : "~6.0.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
